--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,6 +10,11 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
+UNRELEASED version 1.156
+
+* Fix for the 'Filter by hostgroup' box not updating the UI.
+* Show an error message when GUI can not retrieve using REST.
+
 24 Jun 2013 New version 1.154
 
 * Bug fixes
@@ -347,17 +352,19 @@ Interesting curl options:
 * --socks4 IP:PORT
 * -u USER:PASS
 
-A minimal `.conf' file to be read in by scripts:
+*Method 1: Use a `.netrc' file*
 
 ----
-# CURL OPTS
-OPTS=""
+cat <EnD >>~/.netrc
+machine 1.2.3.4 login nagrestconf password thepassword
+EnD
 
-# IP: The ip address of the remote service line container
-IP=127.0.0.1
-
-# FOLDER: the folder name to work in on the remote service line container
-FOLDER="local"
+cat <EnD >>env1.conf
+# EXAMPLE - Set the OPTS,IP and FOLDER variables:
+OPTS="-n"
+IP=1.2.3.4
+FOLDER="env1"
+EnD
 ----
 
 TODO
@@ -404,17 +411,21 @@ they be exported?
 *Solution 1: Copy the `.setup' file*
 
 This will work but bypasses REST and introduces the risk of making mistakes,
-such as incorrect file permissions, or accidental overwrites etc.
+such as incorrect file permissions, or accidental overwrites etc., but is
+easier than the REST method.
 
 *Steps:*
 
-TODO
+Simply copy the `/etc/nagios/objects/<FOLDER>/setup/<FOLDER>_servicesets.setup' file
+to the other server, changing the name of the file to match the new FOLDER.
+
+Ensure the file is owned by the user that runs Apache, then view and apply using
+the nagrestconf GUI.
 
 *Solution 2: Export to a file and use REST*
 
 This has the additional benefit of being able to update many servers from
-a central location, is easier, less risky and is what will be added to the
-GUI or REST interface later.
+a central location and allows REST to check each entry before adding.
 
 *Steps:*
 
