--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.156) UNRELEASED; urgency=low
+
+  * Show an error message when the GUI can not retrieve its data using REST.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Thu, 02 Jul 2013 22:18:00 +0000
+
 nagrestconf (1.155) UNRELEASED; urgency=low
 
   * Filter by hostgroup GUI not updating fix.
