--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,6 +12,10 @@ Latest News
 
 02 Jul 2013 New version 1.156
 
+* Fixes to get GUI working in Internet Explorer 8.
+
+02 Jul 2013 New version 1.156
+
 * Fix for the `Filter by hostgroup' box not updating the UI.
 * Show an error message when the GUI can not retrieve its data using REST.
 
