--- a/SOURCES/nagrestconf-1/debian/changelog
+++ b/SOURCES/nagrestconf-1/debian/changelog
@@ -1,3 +1,9 @@
+nagrestconf (1.157) UNRELEASED; urgency=low
+
+  * Fixes to get GUI working in Internet Explorer 8.
+
+ -- Mark Clarkson <mark.clarkson@smorg.co.uk>  Thu, 03 Jul 2013 21:18:00 +0000
+
 nagrestconf (1.156) UNRELEASED; urgency=low
 
   * Show an error message when the GUI can not retrieve its data using REST.
