--- a/README.asciidoc
+++ b/README.asciidoc
@@ -10,7 +10,8 @@ CAUTION: THIS SOFTWARE IS IN THE http://en.wikipedia.org/wiki/Software_release_l
 Latest News
 ~~~~~~~~~~~
 
-17 Aug 2013 New version 1.158 (Centos/Redhat RPMS Released)
+18 Aug 2013 New version 1.158 (Debian packages released)
+17 Aug 2013 New version 1.158 (Centos/Redhat RPMS released)
 
 * Page tabs are now dynamic.
 * Added `Check Command' to the Edit Host dialog.
