--- a/NEWS.asciidoc
+++ b/NEWS.asciidoc
@@ -1,6 +1,21 @@
 News
 ----
 
+18 Aug 2013 New version 1.158 https://sourceforge.net/projects/nagrestconf/files/[(Debian packages)]
+
+17 Aug 2013 New version 1.158 https://sourceforge.net/projects/nagrestconf/files/[(Centos/Redhat RPMS)]
+
+* Page tabs are now dynamic.
+* Added `Check Command' to the Edit Host dialog.
+* Plugins support started.
+** Services-Tab plugin added.
+** Bulk Tools Services plugin added.
+** Bulk Tools Hosts plugin added.
+
+03 Jul 2013 New version 1.157
+
+* Fixes to get GUI working in Internet Explorer 8.
+
 25 Jun 2013 New version 1.155
 
 * Bug fixes
