--- a/README.asciidoc
+++ b/README.asciidoc
@@ -13,9 +13,9 @@ Latest News
 xx Dec 2013 New version 1.159 (UNRELEASED)
 
 * GUI now works in Internet Explorer 8, 9, 10 and 11.
-* Added more fields to the GUI for Host Templates.
-* Added more fields to the GUI for Service Templates.
-* Added more fields to the GUI for Contacts.
+* Added more fields to the GUI for Host Templates, Service Templates, and Contacts.
+* Added auto-completion to some text entry boxes.
+* Various bug fixes.
 
 License
 ~~~~~~~
