Doc update - servicesets

--- a/README.asciidoc
+++ b/README.asciidoc
@@ -1876,14 +1876,14 @@ servicesets
 | 12.    | Display name                  | X       | displayname               | display_name
 | 13.    | Is volatile                   | X       | isvolatile                | is_volatile
 | 14.    | Initial state                 | X       | initialstate              | initial_state
-| 15.    | Max check attempts            | X       | maxcheckattempts          | max_check_attempts
-| 16.    | Check interval                | X       | checkinterval             | check_interval
-| 17.    | Retry interval                | X       | retryinterval             | retry_interval
-| 18.    | Passive checks enabled        | X       | passivechecks             | passive_checks_enabled
+| 15.    | Max check attempts            |         | maxcheckattempts          | max_check_attempts
+| 16.    | Check interval                |         | checkinterval             | check_interval
+| 17.    | Retry interval                |         | retryinterval             | retry_interval
+| 18.    | Passive checks enabled        |         | passivechecks             | passive_checks_enabled
 | 19.    | Check period                  | X       | checkperiod               | check_period
 | 20.    | Obsess over service           | X       | obsessoverservice         | obsess_over_service
-| 21.    | Freshness threshold (manual)  | X       | manfreshnessthresh        | freshness_threshold
-| 22.    | Check Freshness               | X       | checkfreshness            | check_freshness
+| 21.    | Freshness threshold (manual)  |         | manfreshnessthresh        | freshness_threshold
+| 22.    | Check Freshness               |         | checkfreshness            | check_freshness
 | 23.    | Event handler                 | X       | eventhandler              | event_handler
 | 24.    | Event handler enabled         | X       | eventhandlerenabled       | event_handler_enabled
 | 25.    | Low flap threshold            | X       | lowflapthresh             | low_flap_threshold
@@ -1891,8 +1891,8 @@ servicesets
 | 27.    | Flap detection enabled        | X       | flapdetectionenabled      | flap_detection_enabled
 | 28.    | Flap detection options        | LX      | flapdetectionoptions      | flap_detection_options
 | 29.    | Process perf data             | X       | processperfdata           | process_perf_data
-| 30.    | Retain status information     | X       | retainstatusinfo          | retain_status_information
-| 31.    | Retain nonstatus information  | X       | retainnonstatusinfo       | retain_nonstatus_information
+| 30.    | Retain status information     |         | retainstatusinfo          | retain_status_information
+| 31.    | Retain nonstatus information  |         | retainnonstatusinfo       | retain_nonstatus_information
 | 32.    | Notification interval         | X       | notifinterval             | notification_interval
 | 33.    | First notification delay      | X       | firstnotifdelay           | first_notifdelay
 | 34.    | Notification period           | X       | notifperiod               | notification_period
