--- a/README.asciidoc
+++ b/README.asciidoc
@@ -15,6 +15,7 @@ xx Dec 2013 New version 1.159 (UNRELEASED)
 * GUI now works in Internet Explorer 8, 9, 10 and 11.
 * Added more fields to the GUI for Host Templates, Service Templates, and Contacts.
 * Added auto-completion to some text entry boxes.
+* Servicesets field in hosts now accepts multiple service sets. Service sets added from left to right; any duplicate services are overwritten by the rightmost serviceset.
 * Various bug fixes.
 
 License
@@ -1652,7 +1653,7 @@ hosts
 | 6.     | Contact                       | LM      | contact                   | contacts
 | 7.     | Contact Group                 | LM      | contactgroups             | contact_groups
 | 8.     | Active checks                 |         | activechecks              | active_checks_enabled
-| 9.     | Service Set                   |         | servicesets               | N/A
+| 9.     | Service Set                   | L       | servicesets               | N/A
 | 10.    | Disable [0,1,2]               |         | disable                   | N/A
 | 11.    | Display name                  | X       | displayname               | display_name
 | 12.    | Parents                       | LXM     | parents                   | parents
