--- a/README.asciidoc
+++ b/README.asciidoc
@@ -12,10 +12,11 @@ Latest News
 
 xx Dec 2013 New version 1.159 (UNRELEASED)
 
-* GUI now works in Internet Explorer 8, 9, 10 and 11.
-* Added more fields to the GUI for Host Templates, Service Templates, and Contacts.
-* Added auto-completion to some text entry boxes.
-* Servicesets field in hosts now accepts multiple service sets. Service sets added from left to right; any duplicate services are overwritten by the rightmost serviceset.
+* The GUI now works in Internet Explorer 8, 9, 10 and 11.
+* More fields have been added to the GUI for Host Templates, Service Templates, and Contacts.
+* Added auto-completion to most applicable text entry boxes.
+* Servicesets field in hosts now accepts multiple service sets. Service sets are added from left to right; any duplicate services are overwritten by the rightmost serviceset.
+* The service sets can now be edited and reapplied to hosts using the edit host dialog.
 * Various bug fixes.
 
 License
